--- a/_posts/2022-04-12-INMEDIA-上海昨-放寬-封城-拒-躺平-下的民間抗議與不滿.html
+++ b/_posts/2022-04-12-INMEDIA-上海昨-放寬-封城-拒-躺平-下的民間抗議與不滿.html
@@ -14,26 +14,40 @@ author: 獨媒報導
 <p>上海昨日新增23,342宗個案，包括22,348宗無症狀感染。上海上月底宣布「封城」，以黃浦江為界分兩區「封控」，並展開新一輪全民核酸檢測行動，當局昨宣布，截至昨晨共採樣2,512萬人，並已完成檢測2,152萬人，按初步篩查結果，將全市分為「封控區」、「管控區」、「防範區」三區。</p>
 <p>其中7天內有陽性感染個案的「封控區」，將實施7天封閉管理和居家健康監測，居民須足不出戶；7天內無陽性個案的「管控區」，將實施7天居家健康監測，居民不得離開小區，嚴禁聚集；14天內無陽性個案的「防範區」，居民可在街鎮範圍內適當活動，但要減少流動，避免聚集，且不得流動到封控區和管控區。當局昨公布第一批名單，包括封控區7,624個、管控區2,460個、防範區7,565個。</p>
 <p>對於「放寬」措施，有網民批評現時疫情仍然嚴重，「允許市民走出家門，這是對他們的自覺性多有信心？」、「連封控小區里大爺大媽遛狗都管不住，怎麼有信心不讓人跨區的」、「這是沽名釣譽，這些小區將成為新一輪的毒源或傳播載體 」。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/e6DW65" title="螢幕快照 2022-04-12 下午12.56.28"><img src="https://live.staticflickr.com/65535/51998002557_f66c2ea098_z.jpg" width="640" alt="螢幕快照 2022-04-12 下午12.56.28" /></a><br /><em>微博截圖</em></p>
 <p><strong>防範區陸續解封 但多區稱「提級管理」不准外出</strong></p>
 <p>從內地媒體報導可見，昨日起已有防範區的居民走出小區，並按照「每户每天只能有一人外出，且只能出去一次」的原則採購物品，<a href="https://weibo.com/1784473157/Lo4OiC8QL">有人散步、購物、理髮等</a>。在金山區首批防範區的楓涇鎮佳田苑小區，有居民受訪時表示「心情很愉悅，憋了好久想出去放飛一下」。</p>
 <p>但也有不少防範區居民反映，當地居委會指根據疫情防控部門要求，防範區須「提級管理」，參照管控區要求執行，居民不得外出。有網民直批「對外發一套讓全國人民看，對內另行口頭通知層層加碼，表裡不一，上海，真有你的」。亦有居民反映，即使開放活動，但小區內不准用私家車或自行車，商店亦沒有開門，「解封也不意味着生活正常」。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/89150J" title="00623tkTly1h16o9fz8ihj30zk1beq5x"><img src="https://live.staticflickr.com/65535/51999712354_440f0b959c_z.jpg" width="640" alt="00623tkTly1h16o9fz8ihj30zk1beq5x" /></a><br /><em>微博截圖</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/h1gS64" title="螢幕快照 2022-04-12 下午12.59.48"><img src="https://live.staticflickr.com/65535/51998002597_cff2673c96_z.jpg" width="640" alt="螢幕快照 2022-04-12 下午12.59.48" /></a><br /><em>微博截圖</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/92kN2s" title="螢幕快照 2022-04-12 下午1.12.29"><img src="https://live.staticflickr.com/65535/51999550330_e2948e4ea8_z.jpg" width="640" alt="螢幕快照 2022-04-12 下午1.12.29" /></a><br /><em>微博截圖</em></p>
 <p><strong>大廈突被鎖 網民呼「非法關押」、「着火了怎麼辦？」</strong></p>
 <p>上海兩星期封城以來，出現不少基層防控亂象，民間怨聲四起。昨有徐匯區居民<a href="https://weibo.com/1942388267/LnVrq0OZ4#comment">發文</a>表示，其所住大廈有陽性個案，在沒有任何事前知會下被居委會以鎖鏈鎖住防盜門，即使與居委會溝通和報警亦未獲回應。他質疑居委會「非法關押」，擔心遇火警和緊急情況無法處理，又質問「難道居民的人身安全就沒有任何法律機構來維護嗎？」</p>
 <p>有網民回應「這就是上海市政府，新聞和現實的差距就是天堂到地獄的距離」、「上鎖從任何角度都說不通，絕對非法，沒有一點人性」，亦有人指「我也被鎖了」、「居委會也只是執行」。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Ejv7XE" title="螢幕快照 2022-04-12 上午12.29.40"><img src="https://live.staticflickr.com/65535/51999068908_0ec9031117_z.jpg" width="640" alt="螢幕快照 2022-04-12 上午12.29.40" /></a><br /><em>微博截圖</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/F366r0" title="73c67e2bly1h15lfy9e2dj20zj1beqeq"><img src="https://live.staticflickr.com/65535/51999737099_f0a585fce7.jpg" width="434" alt="73c67e2bly1h15lfy9e2dj20zj1beqeq" /></a><br /><em>微博截圖</em></p>
 <p>防疫人員亦屢與居民起衝突。網上早前流傳，一名孕婦經居委會同意後去醫院，但<a href="https://twitter.com/remonwangxt/status/1512499677702283283">疑因未能出示證明而被防疫人員毆打</a>。上周亦有片段顯示，一名上海浦東新區住戶因確診而須隔離，家中的寵物哥基犬無人照料，在主人被帶上車後，隨即被防疫人員以鐵鏟打死。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/he44DR" title="螢幕快照 2022-04-12 下午7.37.42"><img src="https://live.staticflickr.com/65535/51999469786_6a16c61e50_z.jpg" width="640" alt="螢幕快照 2022-04-12 下午7.37.42" /></a><br /><em>微博截圖</em></p>
 <p><strong>物資短缺民眾自發團購、「以物易物」</strong></p>
 <p>上海市內物資短缺，居民紛紛成立互助和團購群組，惟<a href="https://www.inmediahk.net/node/%E5%9C%8B%E9%9A%9B/%E4%B8%8A%E6%B5%B7%E6%90%B6%E8%8F%9C%E8%8D%92%E6%8C%81%E7%BA%8C-%E5%BE%AE%E5%8D%9A%E3%80%8C%E4%B8%8A%E6%B5%B7%E8%B2%B7%E8%8F%9C%E3%80%8D%E9%81%AD%E5%B0%81%E9%8E%96-%E7%B6%B2%E6%B0%91%E8%AA%BF%E4%BE%83%E3%80%8C%E5%BE%B9%E5%BA%95%E8%A7%A3%E6%B1%BA%E5%A4%A7%E5%95%8F%E9%A1%8C%E3%80%8D">早前微博「上海買菜」標籤遭封鎖</a>。不少網民表示，開展了與鄰舍「以物易物」的生活，在晚上將對方所需的物資以紙袋掛在門口交換：「在2022年的上海，在隔離的第26天，我已成功過上了以物易物的生活：用花菜換土豆，用牛排換漢堡麵包胚，用餅乾換保鮮袋……」</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/84r1q8" title="螢幕快照 2022-04-12 下午1.24.25"><img src="https://live.staticflickr.com/65535/51999014761_cdfcfb9d93_z.jpg" width="640" alt="螢幕快照 2022-04-12 下午1.24.25" /></a><br /><em>微博截圖</em></p>
 <p>對此有網民無奈表示，「有人問為啥上海這麼多團長，這麼多團購，其他城市沒這樣啊……那是因為其他城市有保障，也沒有停快遞停外賣停買菜啊」。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4SC072" title="螢幕快照 2022-04-12 下午8.01.11"><img src="https://live.staticflickr.com/65535/51999722929_b9032ba11e_z.jpg" width="640" alt="螢幕快照 2022-04-12 下午8.01.11" /></a><br /><em>微博截圖</em></p>
 <p><strong>民眾抗議無物資、崩潰尖叫 警方廣播「控制靈魂對自由的渴望」</strong></p>
 <p>物資短缺亦引發民眾抗議。不止一段網上<a href="https://twitter.com/MikeSmithAFR/status/1512557720544903169?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1512557720544903169%7Ctwgr%5E%7Ctwcon%5Es1_&amp;ref_url=https%3A%2F%2Ftw.news.yahoo.com%2FE4B88DE5BF8DE4BA86-E4B88AE6B5B7E6B091E79CBEE5B08FE58D80E68A97E8ADB0-E8A681E789A9E8B387-E98284E9968BE8BB8AE6929EE8ADA6E5AF9F-030457730.html">片段顯示</a>，多名上海居民聚集，要求防疫人員「發物資」。亦有長達一分半鐘的<a href="https://twitter.com/DrEricDing/status/1512974880463114241?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1512974880463114241%7Ctwgr%5E%7Ctwcon%5Es1_&amp;ref_url=https%3A%2F%2Ftw.news.yahoo.com%2FE5B081E59F8EE5A4A7E5B4A9E6BDB0-E4B88AE6B5B7E4BABAE8A2ABE9979CE588B0E799BCE7988B-E58D8AE5A49CE7979BE593ADE69AB4E590BCE5BDB1E78987E69B9D-115600638.html">影片顯示</a>，封城7日後上海居民在各自住宅崩潰尖叫，拍攝者稱「不能出門這不行的，再這樣下去會出人命的」。</p>
 <p>有上海網民<a href="https://weibo.com/1457478803/Ln5x3mAxT?refer_flag=1001030103">發布片段</a>，指松江九亭居民在陽台高喊沒有物資，惟遭警察無人機廣播：「松江九亭家園的居民朋友們，在疫情封控期間請嚴格遵守市政府相關防疫規定。控制靈魂對自由的渴望，不要開窗歌唱，此行為有疫情傳播的風險。」</p>
 <p><strong>上海屢闢謠 網民不信服：上海每次闢謠，都是真相</strong></p>
 <p>市內資訊混亂，當局着力打擊「謠言」。如4月9日網傳上海高速路出口有防疫人員使用「生命探測儀」檢查經過的貨車，以防有上海人逃走，上海闢謠平台核查指圖片於外省市發生，上海高速路亦無工作人員使用生命探測儀掃描車輛。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3S2AE2" title="001WLsZ7ly1h163ofsiraj60bn0h175p02"><img src="https://live.staticflickr.com/65535/52000011530_dbd2709884.jpg" width="382" alt="001WLsZ7ly1h163ofsiraj60bn0h175p02" /></a><br /><em>微博截圖</em></p>
 <p>此外，4月10日微信有網友稱，上海有「黑快遞」染上新冠病毒後，為了做生意在核酸檢測造假，又指這是很多小區出現陽性感染的原因。當局指經初步調查，上海目前不存在相關情況，上海公安已介入調查。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/0fUy75" title="0033ImPzly1h162u3zzzyj60u00j3goe02"><img src="https://live.staticflickr.com/65535/51999013696_258e4bcbe5_z.jpg" width="640" alt="0033ImPzly1h162u3zzzyj60u00j3goe02" /></a><br /><em>微博截圖</em></p>
 <p>網民對此反應不一，有人指「用這麼嚴肅的事造謠，要嚴懲」，但也有不少人不以為然：「求別闢謠了，本來是不信的，你一闢謠我就信了」、「上海每次闢謠，都是真相」、「真也好假也好，其實大家都已經不關心了，大家更關心明天菜的著落吧？  」</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/8H7vbT" title="螢幕快照 2022-04-12 下午12.52.43"><img src="https://live.staticflickr.com/65535/51998002542_6f22b8e7fc_z.jpg" width="640" alt="螢幕快照 2022-04-12 下午12.52.43" /></a><br /><em>微博截圖</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/01887T" title="螢幕快照 2022-04-12 上午1.48.31"><img src="https://live.staticflickr.com/65535/51999550200_7e2f62a25f_z.jpg" width="640" alt="螢幕快照 2022-04-12 上午1.48.31" /></a><br /><em>微博截圖</em></p>
 <p><strong>梁萬年：「動態清零」是上海抗疫最佳方案 現將疫情「圍住撈乾」</strong></p>
 <p>連日破兩萬確診，上海仍堅持「動態清零」方針。國家衞健委專家組組長梁萬年日前接受訪問時，指Omicron 傳播速度非常快，隱匿性特別強，大大增加了疫情防控的難度，單靠過去的措施，很難快速控制住疫情。</p>
 <p>他指，Omicron 不是「大號流感」，危害性比流感大很多，一旦「躺平」，對居民的生命、健康和社會生產均造成巨大危害，亦會增加老年人的風險，「疫情對這類脆弱人群就是一場災難」。</p>
 <p>他強調「動態清零」是上海抗疫最佳方案，指上海具備動態清零的能力，透過對部分群眾進行管控，換取更長時間和更大範圍的正常生產生活。梁萬年強調，「動態清零」不代表「零感染」、「零容忍」，而是要「以快制快」，以更快的速度發現及圍堵病毒。</p>
 <p>梁萬年又指，上海感染數量仍處高位，但現時封城及篩查措施已把感染者「指數式快速上漲的勢頭」進行了有效的遏制，形容上海現正處於把疫情「圍住撈乾」的階段，「紮實做好各項防控舉措，堅持就是勝利」。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/r18W3e" title="螢幕截圖 2022-03-22 18.01.51"><img src="https://live.staticflickr.com/65535/51952957107_f0249bf306_z.jpg" width="640" alt="螢幕截圖 2022-03-22 18.01.51" /></a><br /><em>資料圖片</em></p>
 </div></div></div>
