--- a/_posts/2022-04-12-INMEDIA-網上交流變支持大會-張明敏稱呼李家超做-特首.html
+++ b/_posts/2022-04-12-INMEDIA-網上交流變支持大會-張明敏稱呼李家超做-特首.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/2022MM.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>已宣佈參選特首的前政務司司長李家超下午連開兩場「與選委網上交流會」，多名選委發言表態支持李家超參選。進出口界選委、「愛國歌手」張明敏更先後以「未來特首」、「特首」稱呼李家超。他又建議香港年青人參軍，培養愛國精神，並大力提倡普通話，由特首及立法會議員開始以普通話發言，並指林鄭月娥的發音是歷任特首中最標準。他又指今年是回歸25年，要求建立中國共產黨黨史館，認識自己的領導父母基因。</p>
-<p>首場交流會於下午3時開始，李家超在先重提三項施政理念，即以結果為目標、全面提升競爭力及奠定穩固基石。前香港政制及內地事務局局長譚志源及現位立法會議員黃英豪則全程陪伴在側。</p>
+<p>首場交流會於下午3時開始，李家超先重提三項施政理念，即以結果為目標、全面提升競爭力及奠定穩固基石。前香港政制及內地事務局局長譚志源及現位立法會議員黃英豪則全程陪伴在側。</p>
 <p>全國人大代表、聯泰國際集團行政總裁陳亨利首先獲發言，他指對李家超參選「好開心」，認為是香港之福，非常欣賞對方的施政理念，並建議成立紡織業可持續發展基及策略發展委員會。香港工業總會亦有多人出席交流會，至少三人獲邀發言，稱支持李家超參選。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3k1dqD" title="螢幕截圖 2022-04-12 下午3.45.34"><img src="https://live.staticflickr.com/65535/51999686095_1132e1856f_z.jpg" width="640" alt="螢幕截圖 2022-04-12 下午3.45.34" /></a></p>
 <p><strong>李家誠照稿讀撐李家超</strong></p>
