--- a/_posts/2022-04-12-INMEDIA-李靜稱李家超-文武雙修猛人-汪明荃倡當選後定期約見.html
+++ b/_posts/2022-04-12-INMEDIA-李靜稱李家超-文武雙修猛人-汪明荃倡當選後定期約見.html
@@ -13,7 +13,7 @@ author: 獨媒報導
 <p>另一「體演文出」選委、八和會館主席汪明荃指，希望李家超當選後可作定期交流。她詢問李家超會如何幫助本地藝團如何到大灣區演出，以及補足與吸引更多人才回流。她又指黑暴及疫情令很多人移民，出現資金外流及企業撤資，詢問政府的應對方法。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/38Bk11" title="螢幕截圖 2022-04-12 下午5.22.26"><img src="https://live.staticflickr.com/65535/51999284686_7a8a85efe5_z.jpg" width="640" alt="螢幕截圖 2022-04-12 下午5.22.26" /></a></p>
 <p><strong>狄志遠問會否以8.31框架重啟政改</strong></p>
-<p>社福界選委、新思維主席狄志遠指下午曾與競選團隊成員黃遠山傾談社會福利政綱內容，希望日後與李家超多討論。他又詢問李家超如成功當選，會如何落實香港雙普選，以及會否以8.31人大框架為重點重啟政改。</p>
+<p>社福界選委、新思維主席狄志遠指下午曾與競選團隊成員黃元山傾談社會福利政綱內容，希望日後與李家超多討論。他又詢問李家超如成功當選，會如何落實香港雙普選，以及會否以8.31人大框架為重點重啟政改。</p>
 <p>法律界選委彭韻僖稱最關心香港法治，認為現時香港的司法獨立在國際中受到很大攻擊，「唔夠人出去講，保護香港法治」，要求增加英文的文宣。惟她欲再引述例子時，遭前政制及內地事務局局長、現李家超競選辦副主任譚志源以時間為由中止發言。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1dx8b8" title="螢幕截圖 2022-04-12 下午6.21.42"><img src="https://live.staticflickr.com/65535/51999342106_aed89eb6fb_z.jpg" width="640" alt="螢幕截圖 2022-04-12 下午6.21.42" /></a></p>
 <p>港大醫學院院長梁卓偉指，第五波疫情反映香港院舍的軟硬件及基層醫療服務不足的問題，促立法成立基層醫療管理局，加入私營菜業界，以免公立醫院再出現不正常的現象。</p>
