--- a/_posts/2022-04-13-INMEDIA-拒絕派快測予全體學生-林鄭-公共資源需用於最有需要的人.html
+++ b/_posts/2022-04-13-INMEDIA-拒絕派快測予全體學生-林鄭-公共資源需用於最有需要的人.html
@@ -9,10 +9,10 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/11_20.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 學校將於4月19日分階段復課，教職員及學生須於上學前透過快測獲得陰性結果，政府將提供1,000萬套快測包，免費派發予領取綜援及書簿津貼的學生。有聲音要求全民派發，行政長官林鄭月娥今早被問及時指，公共資源需用於最有需要的人身上，今次安排亦「已經係差唔多最寬鬆」。</p>
-<p>林鄭月娥在今早「十一點抗疫記者會」上，被問到會否免費派發快測包予全港學生。她稱聽到這些訴求，但重申原則是將公共資源用於最有需要的人身上，「我希望大家都唔會反對呢個原則啦」，「如果樣樣嘢都係政府供應呢，我哋就唔係一個只係用緊六千億嘅開支嘅政府啦」。</p>
-<p>她續指哪些人是有需要，「果條線有時候劃得緊啲」，每月發放的社會保障會較緊，而日前派發防疫包則較鬆，而學生亦受惠於近兩年不論背景的二千五百元的「開學費」津貼，可協助其購買包括快測等防疫設備。</p>
-<p>林鄭月娥又以當局提供口罩予學校為例，指兩年來亦向學校免費提供逾9,300萬個口罩，派發予領取綜援及全額書簿津貼的學生。至於今次派發快測包，林鄭形容「已經係差唔多最寬鬆」，快測包則亦會派發予領取半額書簿津貼的學生，「佢地家庭環境係好啲嘅」。</p>
-<p>她形容目前是「好合適的做法」。稱如「樣樣嘢都係全民派」會對政府資源構成影響，最終影響的亦是市民。</p>
+<p>林鄭月娥在今早「十一點抗疫記者會」上，被問到會否免費派發快測包予全港學生。她稱聽到這些訴求，但重申原則是將公共資源用於最有需要的人身上，「我希望大家都唔會反對呢個原則啦」，「如果樣樣嘢都係政府供應呢，我哋就唔係一個只係用緊6千億嘅開支嘅政府啦」。</p>
+<p>她續指哪些人是有需要，「果條線有時候劃得緊啲」，每月發放的社會保障會較緊，而日前派發防疫包則較鬆，而學生亦受惠於近兩年不論背景的2,500元的「開學費」津貼，可協助其購買包括快測等防疫設備。</p>
+<p>林鄭月娥又以當局提供口罩予學校為例，指兩年來亦向學校免費提供逾9,300萬個口罩，派發予領取綜援及全額書簿津貼的學生。至於今次派發快測包，林鄭形容「已經係差唔多最寬鬆」，快測包則亦會派發予領取半額書簿津貼的學生，「佢哋家庭環境係好啲嘅」。</p>
+<p>她形容目前是「好合適的做法」，稱如「樣樣嘢都係全民派」會對政府資源構成影響，最終影響的亦是市民。</p>
 <p>今日4月13日，是領取物資包及快測包的最後一日，林鄭月娥稱歡迎有需要的家長可到89個領取點領取，而快測包至今已派發78萬套。</p>
-<p>至於學生回校上課前須快測的安排，林鄭月娥指考慮到衛生防護中心意見後，在初階段每日進行快測較為合適，重申會於實行數星期後檢視。至於打針者是否可減少或不需快測，她指「打咗針唔係免疫」，仍可感染其他同學，「呢個係好科學嘅工作」。</p>
-</div></div></div>
+<p>至於學生回校上課前須快測的安排，林鄭月娥指考慮到衞生防護中心意見後，在初階段每日進行快測較為合適，重申會於實行數星期後檢視。至於打針者是否可減少或不需快測，她指「打咗針唔係免疫」，仍可感染其他同學，「呢個係好科學嘅工作」。</p>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
