Update VOCUS 2022-04-14 patch

--- a/_posts/2022-04-11-VOCUS-方格子電台-podcast-ep3-台灣的升學主義現象-下.html
+++ b/_posts/2022-04-11-VOCUS-方格子電台-podcast-ep3-台灣的升學主義現象-下.html
@@ -10,10 +10,8 @@ author: 王立第二戰研所
 
 <div class="draft-block draft--p left">全新一季EP.3已上線</div>
 <div class="draft-block draft--p left">每週一更新：時事議題、軍事常識、台海關係⋯都在最新一集<a href="https://open.firstory.me/story/cl1u3hcdp003m01w603r5aqm3/platforms" target="_blank" class="draft--a">《王立第二戰研所》</a>！</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1200px" class="image-block-prerender" data-src="https://images.vocus.cc/c709de44-a3a9-4b86-a7ef-eeb8bb1e9a9e.jpg" data-width="1200" data-height="630" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/c709de44-a3a9-4b86-a7ef-eeb8bb1e9a9e.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽</figcaption></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">身為老師，要幫助孩子打開視野，<br>而不是刻意告訴孩子幾分選哪邊</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">點此用喜歡的方式收聽節目▶︎▷<a href="https://open.firstory.me/story/cl1u3hcdp003m01w603r5aqm3/platforms" target="_blank" class="draft--a">《方格子電台-王立第二戰研所》</a></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <blockquote class="draft-block draft--blockquote">本集更新<br>EP3：台灣的升學主義現象（下）</blockquote>
