--- a/_posts/2022-04-13-VOCUS-liberty-與-自由-靈自由-裡自由-零拘束態-榮-華-讓(令-任)自由-平等-律於自由-自由的人-自由權利-等橋接.html
+++ b/_posts/2022-04-13-VOCUS-liberty-與-自由-靈自由-裡自由-零拘束態-榮-華-讓(令-任)自由-平等-律於自由-自由的人-自由權利-等橋接.html
@@ -9,8 +9,7 @@ author: 羅聖爾
 ---
 
 <h2 class="draft-block draft--h2" name="header-av0sg">完整標題：liberty 與「自由；自由態樣；靈自由；靈之自由；裡自由；內部自由；限制沒之樣態；零限態樣；零拘束態；入門由在你；榮；華；讓自由；使自由；令(之)自由；任自由；平等；律於自由；自由的人；自由權利」等的橋接</h2>
-<div class="draft--imgNormal draft-block"><div><div style="height:1440px" class="image-block-prerender" data-src="https://images.vocus.cc/fb68f95e-1402-4580-ad53-9cd01c3b6199.jpg" data-width="1440" data-height="760" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/fb68f95e-1402-4580-ad53-9cd01c3b6199.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">liberty = 連點目E二兜一 = 連丶目EE兜| = 自</span>ⴹⴺ<span style="font-weight: bold; ">兜| = 自由</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">liberty = 丨點目E二態樣 = 丨丶目EE態樣 = 丨自</span>ⴹⴺ<span style="font-weight: bold; ">態樣 = 自由態樣</span>，意通「自由的狀態」或「自由態」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">liberty = li.berty = 靈(之).朋一round點由 = 靈(之).一一圓㇀由 = 靈(之).二與〇㇀由 = 靈(之).二與口㇀由 = 靈(之).目㇀由 = 靈(之).自由 = 靈自由 or 靈之自由</span>，類似「心靈的自由」。</div>
@@ -35,7 +34,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left">liberty 和 freedom 的不同可能是：liberty 是偏向內部、對內或入內自由的性質，類似「入內無門禁」；freedom 則是偏向外部、對外或外出自由的性質，類似「外出無門禁」、「弗攔門」，也有「釋放」之意。<span style="font-weight: bold; ">(P.S. 參考〈free 與「自由」的轉換密碼〉-- </span><a href="https://vocus.cc/article/5cf86a67fd8978000127306c" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://vocus.cc/article/5cf86a67fd8978000127306c</span></a><span style="font-weight: bold; ">)</span></div>
 <div class="draft-block draft--p left">liberty 的性質，可能較常應用在允許民眾自由進入的公共建築；或是應用於較公正平等的事情，可能是因爲與 liberty 前面的構字元素有點類似的 libra 一字也有「天秤」或「天平」之意，所以也很容易聯想到 libra 的意思。例如 library (內有books讓人read或覽閱，意指「圖書館」) 就帶有一點 liberty 內含的字素，並且 library 豐富的藏書等也可能使人感到追尋知識的自由，而非只是獨尊一家之言；一般在圖書館內部閱覽任何書籍都是自由的，唯一的就是，若想把圖書帶出館就可能有一些限制，也許要辦理外借手續。</div>
 <div class="draft-block draft--p left">所以，liberty 和 freedom 若加在一起，就可能是 <span style="font-weight: bold; ">liberty + freedom = 內外自由 or 進出自由 or 免除所有進出內外的關卡之限制或管制</span>，這樣也就類似「全面而完整且豐富又容許更多探索事物的自由」了。不過，一般人好像也沒有把 liberty 和 freedom 兩字分得那麼清楚，只是在涉及「免費」的意思時，大多還是使用 free 這一系列看起來和 fee (費；費用) 比較相關的單字。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-a9u67"><span style="font-weight: bold; ">P.S.1.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">liber-：自由；靈自由；限制沒；零限；零拘束；榮；華；內部；內在；內裡；裡面；理想；理念。</span>liber- 之所以也有「理想」、「理念」之意，可能是因爲它帶有「內在」的含意，而且「自由」也常常是人人皆渴望的理想。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">liberate：liber為作；liber為動；自由為作；自由為動；……。</span>其中 liber- 已經帶有「自由」的語意。此字爲動詞。</div>
@@ -49,9 +47,8 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">libertarian：liber的心靈之樣；liber的心靈的；liber的心靈之人；liber的心靈者。</span>其中第一個 a 可能代表 heart (心)，而且其後面所接的 r 則可能約略形聲漢語「靈」的起音。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">libertarianism：libertarian之思義；libertarian之思想；libertarian主義；libertarian之想夢；libertarian家</span>，此「家」字是漢字古語「諸子百家」的「家」字。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Statue of Liberty：塑像于自由</span>，意通「自由的塑像」<span style="font-weight: bold; ">；塑彫于自由；像彫于自由；神像于自由；神像于榮華；形體的像于自由；女神像于自由</span>，此時 S 同時約略象徵漢文「女」中的 S 形曲線符號而簡略意會轉換漢字「女」。漢文或譯「自由女神像」。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:3024px" class="image-block-prerender" data-src="https://images.vocus.cc/6e04b602-b367-477e-87b4-c6fb24b9d09a.jpg" data-width="3024" data-height="3024" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"><span style="font-weight: bold; ">【附圖：圖中置放在倒置的鋁製酒盒蓋及可攜式不銹鋼煙灰缸所堆疊起來的台子上的物件，是筆者收藏多年的銅鈴版本之 Statue of Liberty。雖然筆者菸癮未斷，但是在設計言設計，這張相片也許還滿適合發展出一些表達「不吸煙，大自由」的裝置藝術或宣導海報。】</span></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/6e04b602-b367-477e-87b4-c6fb24b9d09a.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"><span style="font-weight: bold; ">【附圖：圖中置放在倒置的鋁製酒盒蓋及可攜式不銹鋼煙灰缸所堆疊起來的台子上的物件，是筆者收藏多年的銅鈴版本之 Statue of Liberty。雖然筆者菸癮未斷，但是在設計言設計，這張相片也許還滿適合發展出一些表達「不吸煙，大自由」的裝置藝術或宣導海報。】</span></figcaption></div>
 <h2 class="draft-block draft--h2" name="header-dor4u"><span style="font-weight: bold; "><br>P.S.2.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Latin：liber --</span> <span style="font-weight: bold; ">榮</span>，即 <span style="font-weight: bold; ">liber = 兩fireㄇ與木 = 兩火冖與木 = 火火冖與木 = 榮</span>，意通「自由」<span style="font-weight: bold; ">；靈之自由；自由；限制沒。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">PIE：*leudh-ero- -- 由己之樣、由己的</span>，意通「自由的」及 English 之 liberal 或 free。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Greek：eleutheros -- 由自之樣形、由己的</span>，意通「自由的」及 English 之 liberal 或 free。Greek 的這個 English 式的拼寫，因爲帶有 elect 和 select 的字素之一 ele 在裡頭，不禁讓筆者聯想到，在古早以前就發展出民主制度 (democracy) 的 Greek 文明，下意識中可能覺得：人民擁有自由參選及自由投票的參選權和選擇權，那纔算是真正的自由民主呢！</div>
-<div class="draft-block draft--p left"></div>
