--- a/_posts/2022-04-13-VOCUS-上海封城背後的兩層深意.html
+++ b/_posts/2022-04-13-VOCUS-上海封城背後的兩層深意.html
@@ -8,4 +8,6 @@ tags: blog
 author: 吳嘉隆
 ---
 
-上海封城背後的兩層深意
+<p>上海是中國第一大城市，￼最國際化的城市，最大的經濟與貿易城市，還有，當然了，是最大的金融中心￼，現在以對抗疫情為理由，嚴格執行所謂的清零政策，￼分區隔離，並且把￼軍隊派進上海，執行封城與軍管，￼這是很嚴重的事情。</p>
+<p>這不是在造謠，而是你首先要明白，￼在中國發生的事情，絕對是政治掛帥。</p>
+<p>誰都知道，目前的Omicron變種病毒所造成的重症與死亡案例非常非常少￼￼，美國與英國在研究這種病毒的結構之後，發現他的傳染性很高，毒性卻很低，相當於流感，所以￼決定解封。在這樣的背景下，中共卻對上海下手，而且下重手，￼你不覺得很奇怪嗎？</p>
