--- a/_posts/2022-04-13-INMEDIA-立場-發布煽動刊物案-控方稱公司放棄出庭權利-5.3區院訊.html
+++ b/_posts/2022-04-13-INMEDIA-立場-發布煽動刊物案-控方稱公司放棄出庭權利-5.3區院訊.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/17_8.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>《立場新聞》母公司、前總編鍾沛權及前署任總編林紹桐被控「串謀發布煽動刊物」，今（13日）於西九龍法院轉介至區域法院。《立場》公司自首度提堂至今已沒有代表出庭，控方表示已向該公司送達出庭通知及文件，惟該公司自動放棄出庭權利，鍾沛權及林紹桐亦拒絕代表公司出庭。國安法指定法官、主任裁判官羅德泉信納文件已送達該公司，應控方要求將案件轉介至區域法院，5月3日再訊，期間二人須繼續還柙。</p>
-<p>案件由《國安法》指定法官、署理總裁判官羅德泉處理，控方代表為署理高級助理刑事檢控專員（特別職務）伍淑娟。前天被捕的前《立場》博客區家麟，及多名前《立場》員工包括記協主席陳朗昇亦有到庭旁聽，公眾席爆滿。</p>
+<p>案件由《國安法》指定法官、主任裁判官羅德泉處理，控方代表為署理高級助理刑事檢控專員（特別職務）伍淑娟。前天以串謀發布煽動刊物罪被捕的前《立場》博客、資深傳媒人區家麟，及多名前《立場》員工包括記協主席陳朗昇亦有到庭旁聽，公眾席爆滿。</p>
 <p>案件去年12月30日首度提堂，押後至2月25日再訊，惟鍾沛權及林紹桐因懲教「鎖倉」檢疫安排未有到庭。兩人事隔逾3個月再於法庭露面，二人均身穿襯衣，精神不錯，與旁聽人士互相揮手。林紹桐面露笑意，不住望向旁聽席，一度做出心形動作。</p>
 <p><strong>控方稱已送達文件 首被告自動放棄出庭權利</strong></p>
 <p>首被告 Best Pencil (Hong Kong) Limited 自首次提堂已沒有代表出庭應訊。控方表示，該公司至今仍在公司登記名冊上，餘下一名董事蔡東豪，註冊地址維持不變。該公司租約於4月尾到期，業主4月4日曾和該公司的行政主任（administration officer）通電話，要求其在4月28日前遷出和交回大門密碼。</p>
