Update VOCUS 2022-04-15 patch

--- a/_posts/2022-04-14-VOCUS-幾家歡樂幾家愁-怎麼用英日文講.html
+++ b/_posts/2022-04-14-VOCUS-幾家歡樂幾家愁-怎麼用英日文講.html
@@ -8,8 +8,35 @@ tags: blog
 author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 ---
 
-<div class="draft--imgNormal draft-block"><div><div style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/cfa62baa-e024-442f-bab2-1fdfbf4b1ccd.jpg" data-width="1280" data-height="1280" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/cfa62baa-e024-442f-bab2-1fdfbf4b1ccd.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">這種中文是沒辦法直譯的，而且視不同的場合還可有不同表達方式，完全要看每個人的外語造詣。這次要講的使用場合是歡樂的<span style="font-weight: bold; ">「贏家」</span>和愁容的<span style="font-weight: bold; ">「輸家」</span>。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
+<h2 class="draft-block draft--h2" name="header-4mg2j">Someone(某人) on the winning(贏的) side(側、邊、面) means(代表) there are others(其他人) on the opposite(相反的、對面的) side.</h2>
+<h2 class="draft-block draft--h2" name="header-b6ntj">[ˈsʌmˌwʌn ɑn ðə ˈwɪnɪŋ saɪd minz ðɛr ɑr ˈʌðərz ɑn ði ˈɑpəzət saɪd]</h2>
+<div class="draft-block draft--p left">比較貼近中文原意的表達方式是把「贏家」(歡樂的幾家)和「輸家」(愁的幾家)變成相互對照的兩個對象。</div>
+<div class="draft-block draft--p left">「贏家」是處於贏面的某個人(Someone on the winning side)，「輸家」是處於對立面的其他人(others on the opposite side)，所以「贏家」的存在代表著(mean)有(there are)「輸家」的存在，有幾家歡樂也有幾家愁。</div>
+<div class="draft-block draft--p left"><span style="text-decoration: underline; ">除非有遇到特別需要強調的場合</span>，否則其實什麼歡樂和憂愁不需要刻意在這句英文中表達出來。每個語言有各自習慣的講法，把中文的邏輯強硬套用到英文，反而會變成外國人覺得沒意義或無法理解的雜訊，這種雜訊在語言的轉換過程中要優先剔除。沒必要的也不用雞婆混淆別人的視聽。</div>
+<blockquote class="draft-block draft--blockquote">Steelmakers(鋼廠) keep(持續) gaining(獲取) profits(利潤), but someone on the winning side means there are others on the opposite side. Downstream(下游) industries(產業) are struggling(掙扎) with significant(顯著的) profit drop(跌落).</blockquote>
+<blockquote class="draft-block draft--blockquote">鋼廠仍持續獲利，但幾家歡樂幾家愁，下游產業仍在大幅的利潤暴跌中困鬥。</blockquote>
+<h2 class="draft-block draft--h2" name="header-1kjb7">There will always(一直、總是) be winners(贏家) and losers(輸家).</h2>
+<h2 class="draft-block draft--h2" name="header-fk43p">[ðɛr wɪl ˈɔlˌweɪz bi ˈwɪnərz ænd ˈluzərz]</h2>
+<div class="draft-block draft--p left">把上面那句英文用簡單白話講，變成「總是(always)會有(there will be)贏家(winners)和輸家(losers)」。</div>
+<blockquote class="draft-block draft--blockquote">There will always be winners and losers. Just take(接納) it that you lost(輸了) your bet(打賭的事).</blockquote>
+<blockquote class="draft-block draft--blockquote">總有幾家歡樂也有幾家愁嘛，你就接受你賭輸了吧。</blockquote>
+<h2 class="draft-block draft--h2" name="header-82rt0">There are those(那些人) that are happy and those that are not.</h2>
+<h2 class="draft-block draft--h2" name="header-4f9io">[ðɛr ɑr ðoʊz ðæt ɑr ˈhæpi ænd ðoʊz ðæt ɑr nɑt]</h2>
+<div class="draft-block draft--p left">有個方式可以把歡樂和憂愁的語感講出來，就是講「有快樂的那些人，也有不是那樣的人」。</div>
+<div class="draft-block draft--p left">those這個單字可以是those people(那些人)或those things(那些東西)、those boys(那些男孩)等等的簡稱，總之就是懶得講兩個單字所以直接用those統稱，在這裡是指那些人(those people)。</div>
+<div class="draft-block draft--p left">that在這裡是一種關係代名詞，有兩個作用，一是擁有<span style="text-decoration: underline; ">代名詞</span>的作用，可以代稱前面的名詞(those people，那些人)；二是可用來說明與前面的名詞是什麼<span style="text-decoration: underline; ">關係</span>，或說明前面的名詞是什麼性質。</div>
+<div class="draft-block draft--p left">There are those that are happy的意思是，有那一些人(There are those people)，而他們(that，代名詞作用)是快樂的(are happy，說明那些人的性質是快樂的)。</div>
+<h2 class="draft-block draft--h2" name="header-2dure"><span style="font-weight: bold; ">勝(</span>か<span style="font-weight: bold; ">)ち組(</span>ぐみ<span style="font-weight: bold; ">)があれば負(</span>ま<span style="font-weight: bold; ">)け組(</span>ぐみ<span style="font-weight: bold; ">)もある</span></h2>
+<div class="draft-block draft--p left">歡樂的人是贏家「勝ち組」，憂愁的人是輸家「負け組」。日文也可以透過將「贏家」與「輸家」做對比，透過「......があれば(如果有)......もある(也會有)」的句型表達出來。幾家歡樂幾家愁就是如果有贏家(勝ち組があれば)，也會有輸家(負け組もある)。</div>
+<blockquote class="draft-block draft--blockquote">近年(きんねん)のパンデミックは諸刃(もろは)の剣(つるぎ)ということで、勝(か)ち組(ぐみ)の企業(きぎょう)があれば負(ま)け組(ぐみ)になってしまう企業(きぎょう)もある。</blockquote>
+<blockquote class="draft-block draft--blockquote">這幾年的疫情是雙面刃，所以企業是幾家歡樂幾家愁(有勝利組的企業也有不幸變成失敗組的企業)。</blockquote>
+<div class="draft-block draft--p left">掌握「......があれば......もある(如果有某事物，也會有某事物)」、「......がいれば......もいる(如果有某人，也會有某人)」的句型，還可以把歡樂和憂愁以及其他的語感表達出來。</div>
+<blockquote class="draft-block draft--blockquote">勝(か)ち取(と)った国(くに)があれば負(ま)け込(こ)んで抜(ぬ)けられない国(くに)もある。</blockquote>
+<blockquote class="draft-block draft--blockquote">有獲得勝戰的國家也有輸到無法掙脫的國家。</blockquote>
+<blockquote class="draft-block draft--blockquote">楽(たの)しい人(ひと)がいれば、悲(かな)しい人(ひと)もいる。</blockquote>
+<blockquote class="draft-block draft--blockquote">有高興的人，也有悲傷的人。</blockquote>
+<blockquote class="draft-block draft--blockquote">幸(しあわ)せな人(ひと)がいれば不幸(ふこう)な人もいる。</blockquote>
+<blockquote class="draft-block draft--blockquote">有幸福的人，也有不幸的人。</blockquote>
+<div class="draft-block draft--p left">編寫外語教學文章耗時費力，如果你喜歡我的文章，請幫忙分享給其他你知道想學外文的人們。或是追蹤、按讚，表達你的支持。更多生活好用的英日文在我這裡等你來發掘！</div>
