--- a/_posts/2022-04-18-INMEDIA-救護車送兩醫院均拒收-上海71歲小提琴手難忍腹痛墮樓亡.html
+++ b/_posts/2022-04-18-INMEDIA-救護車送兩醫院均拒收-上海71歲小提琴手難忍腹痛墮樓亡.html
@@ -30,8 +30,8 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/2okf77" title="螢幕快照 2022-04-18 下午12.58.26"><img src="https://live.staticflickr.com/65535/52012330969_602432b794_z.jpg" width="640" alt="螢幕快照 2022-04-18 下午12.58.26" /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/R2f1Fi" title="螢幕快照 2022-04-18 下午1.21.00"><img src="https://live.staticflickr.com/65535/52011089077_2791fb1da0_z.jpg" width="640" alt="螢幕快照 2022-04-18 下午1.21.00" /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/q5kLbg" title="螢幕快照 2022-04-18 下午1.22.44"><img src="https://live.staticflickr.com/65535/52012360524_d28a29e683_z.jpg" width="640" alt="螢幕快照 2022-04-18 下午1.22.44" /></a><br /><em>網上留言截圖</em></p>
-<p>上海疫情爆發以來，屢傳延醫致死。上月便有報道指，上海市東方醫院南院生殖中心護士周盛妮哮喘發作，惟被自己任職的醫院急診部拒收，需送往10公里外的仁濟醫院東院，惟因耽誤治療，搶救無效去世。上海市衛健委主任曾在記者會向她表示深切哀悼。</p>
+<p>上海疫情爆發以來，屢傳延醫致死的個案。上月便有報道指，上海市東方醫院南院生殖中心護士周盛妮哮喘發作，惟被自己任職的醫院急診部拒收，需送往10公里外的仁濟醫院東院，惟因耽誤治療，搶救無效去世。上海市衛健委主任曾在記者會向她表示深切哀悼。</p>
 <p><strong>上海首現死亡病例</strong></p>
 <p>中國昨日新增23,362宗本土感染個案，其中上海佔22,248宗，包括19,831宗無症狀感染。上海亦自3月底封控以來首度通報3宗死亡案例，死者介乎89至91歲，患有高血壓、冠心病和糖尿病等。</p>
-<p>當局堅持動態清零方針，而路透社昨便引消息指，上海當局已設立目楆，決心周三（20日）前達到「社會面清零」，以進一步解封。</p>
+<p>當局堅持動態清零方針，而路透社昨便引消息指，上海當局已設立目標，決心周三（20日）前達到「社會面清零」，以進一步解封。</p>
 </div></div></div>
