--- a/_posts/2022-04-17-INITIUM-大陆疫情-抽干-诊疗资源-谁在为动态清零付出代价.html
+++ b/_posts/2022-04-17-INITIUM-大陆疫情-抽干-诊疗资源-谁在为动态清零付出代价.html
@@ -5,10 +5,10 @@ date: 2022-04-17 21:51:00.000000000 +00:00
 link: https://theinitium.com/article/20220418-mainland-covid19-dynamic-zero-policy/
 categories: initium
 tags: blog
-author: 端传媒特约撰稿人王二 发自新加坡
+author: 特约撰稿人王二 发自新加坡
 ---
 
-<p>「压力层层传导，从医院到科室再到医护个人。王淑怡说：“就像一台巨大的机器，每一颗螺丝钉不能说你受不了了。”」</p><p>端传媒特约撰稿人王二 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220418-mainland-covid19-dynamic-zero-policy/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/a4acbfdcbffd4ad28b1fee56dded38a3.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年4月14日，中国上海，康复的2019冠状病毒患者离开临时医院。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「压力层层传导，从医院到科室再到医护个人。王淑怡说：“就像一台巨大的机器，每一颗螺丝钉不能说你受不了了。”」</p><p>特约撰稿人王二 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220418-mainland-covid19-dynamic-zero-policy/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/a4acbfdcbffd4ad28b1fee56dded38a3.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年4月14日，中国上海，康复的2019冠状病毒患者离开临时医院。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年4月14日，中国上海，康复的2019冠状病毒患者离开临时医院。<span class="credit">摄：Yin Liqin/China News Service via Getty Images</span></figcaption></figure><p><small>【编者按】自3月开始的中国大陆Omicron疫情仍在持续。截至4月16日，大陆Covid-19确诊人数高达27000多例。上海市和吉林省是本轮疫情的“震中”。在宣布“封省”一个月后，吉林省新发感染者方从每日4000多例降至不足1000例。4月8日，吉林市宣布社会面清零，一周后的4月14日，长春市宣布实现社会面清零。<br>而与吉林省疫情同步爆发的上海，感染数仍处于井喷状态。进入4月后曾一度攀升至日新增感染26000多例。本地医疗资源严重挤兑，百余方舱因“应收尽收”的指令皆已“爆舱”。在“动态清零”的总方针下，上海Omicron疫情频繁暴出的次生灾害，已招致民间对防控政策的巨大质疑，从医护、基层防疫人员到普通市民。</small></p>
 <figure class="widget-number"><span class="number">30</span><span class="unit">万例</span><figcaption>2月26日至4月17日，上海累计本土确诊24529例。其中，重症患者16例，死亡3例；确诊和无症状感染者累计共超30万例。</figcaption></figure>
 
