--- a/_posts/2022-04-18-INITIUM-复课了-一切就会好吗-家有幼童-如何挨过疫中两年半.html
+++ b/_posts/2022-04-18-INITIUM-复课了-一切就会好吗-家有幼童-如何挨过疫中两年半.html
@@ -15,7 +15,7 @@ author: 陈倩儿
 <p>“你六岁时玩的游乐场，也不能弥补你三岁时的游乐场⋯⋯”</p>
 </blockquote>
 <p>疫中困两年，雪琴觉得自己“一家人都病了”。</p>
-<p>困扰她的早已不是新冠病毒，而是更深层的：做厨师的丈夫开工不足收入减少，两个女儿经常停课，她只能放弃兼职工作，留家照顾。在深水埗，一家四口蜗居在不足150平方呎（约等于13.9平方米，或4.2坪）的㓥房，从买菜做饭、洗衣洗碗到全天候顾小孩，而跟进功课的任务自然也全落到雪琴肩上。</p>
+<p>困扰她的早已不是病毒，而是更深层的：做厨师的丈夫开工不足收入减少，两个女儿经常停课，她只能放弃兼职工作，留家照顾。在深水埗，一家四口蜗居在不足150平方呎（约等于13.9平方米，或4.2坪）的㓥房，从买菜做饭、洗衣洗碗到全天候顾小孩，而跟进功课的任务自然也全落到雪琴肩上。</p>
 <p>“我很多家务要做，教育方面我没有太多经验。辛苦不要紧，但我好像找不到方法让他们有正面发展，女儿以前上学（实体课），回家就自己做功课，但疫情期间在家，一页功课可以做几天⋯⋯”雪琴说，大女儿读幼稚园大班时停止面授半年，甫入小学就赶上网课，跟不上进度；小女儿今年4岁多，虽说已读幼稚园中班，“但没上过几天学”，内向怕人。</p>
 <p>“妹妹没有朋友，对生活没什么美好的期盼，每天在家里就是妈妈、姐姐，她生命中就只有我们两个人，”雪琴叹气，8岁的姐姐一旁搭话：“我的生活中不是也只有你和妹妹吗？”</p>
  
