--- a/_posts/2022-04-19-PQ-俄羅斯莫斯科號被擊沉-只因烏克蘭飛彈.html
+++ b/_posts/2022-04-19-PQ-俄羅斯莫斯科號被擊沉-只因烏克蘭飛彈.html
@@ -24,7 +24,7 @@ author: 尚萬皮
 
 
 
-<p>軍事戰略專家、台灣安保協會副秘書長何澄輝提到，烏克蘭軍隊之所以可以屢屢在戰事中展現精準打擊能力，摧毀包括俄羅斯莫斯克號巡洋艦等俄方多艘軍艦，乃至俄羅斯戰機、坦克。美國、北約、瑞典在烏克蘭周邊部署的各種具專門技術裝備的各類<strong>情監偵機種（ISR Flight）</strong>，或許扮演了至關重要的角色。</p>
+<p>軍事戰略專家、台灣安保協會副秘書長何澄輝提到，烏克蘭軍隊之所以可以屢屢在戰事中展現精準打擊能力，摧毀包括俄羅斯莫斯科號巡洋艦等俄方多艘軍艦，乃至俄羅斯戰機、坦克，美國、北約、瑞典在烏克蘭周邊部署的各種具專門技術裝備的各類<strong>情監偵機種（ISR Flight）</strong>，或許扮演了至關重要的角色。</p>
 
 
 
@@ -60,7 +60,7 @@ author: 尚萬皮
 
 
 
-<p>因此，更跌破專家眼鏡的是，<strong>烏克蘭人民的抵抗意志是如此堅定，甚至喚醒世界各國對獨裁者入侵的抵制</strong>，持續對烏克蘭的人道救援、軍備援助，以及第一時間祭出金融核武的經濟制裁，禁止特定俄羅斯銀行使用「全球銀行金融電信協會」（Society for Worldwide Interbank Financial Telecommunication, SWIFT）的支付系統。 為了方便大家理解 ADSB 飛航追蹤系統圖上說明的各式電偵機，何澄輝提供了他自己的整理，簡要說明各式電偵機之功能、任務、使用國家：</p>
+<p>因此，更跌破專家眼鏡的是，<strong>烏克蘭人民的抵抗意志是如此堅定，甚至喚醒世界各國對獨裁者入侵的抵制</strong>，持續對烏克蘭的人道救援、軍備援助，以及第一時間祭出金融核武的經濟制裁，禁止特定俄羅斯銀行使用「全球銀行金融電信協會」（Society for Worldwide Interbank Financial Telecommunication, SWIFT）的支付系統。 為了方便大家理解 ADSB 飛航追蹤系統圖上說明的各式電偵機，何澄輝提供了他自己的整理，簡要說明各式電偵機之功能、任務、使用國家，而許多人不知道的是，<strong>以下的每種電偵機都在台海周邊空域出現過</strong>。</p>
 
 
 
