--- a/_posts/2022-04-19-INITIUM-探问疫下香港医疗崩溃-上-病床一位难求-公私营双轨制如何走向失效.html
+++ b/_posts/2022-04-19-INITIUM-探问疫下香港医疗崩溃-上-病床一位难求-公私营双轨制如何走向失效.html
@@ -9,7 +9,8 @@ author: 特约撰稿人 刘伟程 发自香港
 ---
 
 <p>「“（医管局）内部会说，我们是victim of our own success（自己成功下的受害者）”。」</p><p>特约撰稿人 刘伟程 发自香港</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220420-hongkong-collaspe-of-health-care-system/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/505e0acef558404392df6a1408672c12.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年2月18日，明爱医院的医护人员将户外病人全部移入室内。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年2月18日，明爱医院的医护人员将户外病人全部移入室内。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure><p><small>（编按︰香港第五波疫情死亡率高居全球前列，公立医院急症室及内科病房“沦陷”，揭示出医疗系统潜伏多年的隐患。端传媒梳理香港医疗多年的发展，并访问死者家属、前线医护、公共卫生学者及医院管理层等，一连两日刊出两篇“香港医疗崩溃”文章，探讨疫下香港医疗的“病因”。）</small><br><br>香港于去年年底起，爆发以变种病毒Omicron引起的第五波疫情，至农历年假后，形势急转直下，彻底失控。截至4月19日，已有8963人离世，死亡率达0.76%；离世者中，超过九成是65岁以上长者。<br><br>疫情乱局当中，有病人要在急症室苦候数天，甚至有病人未获治疗已离世；医护人员不吃不休地工作，病房内1名护士要照顾10名病人；伊利沙伯医院急症室顾问医生何晓辉，在员工座谈会上说起急症室超负荷时，更当众洒泪，“我们的同事，这个月，挨得很辛苦……”中文大学医院的行政总裁、曾任医院管理局新界东联网总监多年的冯康，早前便在报章撰文，承认医疗系统已经“沦陷”，并呼吁反思医疗制度，以及疫情的应变政策。<br><br>第五波疫情揭示的，除了公立医院的承载力，还有私营医疗系统，在应对疫情时扮演的角色；以及香港市民依靠公立医院急症室，才能接触到医疗服务的状况。一波疫情，把医疗系统的根本问题，借着逾8000名死者，尽数呈现在港人眼前。</p>
+            <figcaption itemprop="caption">2022年2月18日，明爱医院的医护人员将户外病人全部移入室内。<span class="credit">摄：林振东/端传媒 </span></figcaption></figure><p><small>（【编者按】︰香港第五波疫情死亡率高居全球前列，公立医院急症室及内科病房“沦陷”，揭示出医疗系统潜伏多年的隐患。端传媒梳理香港医疗多年的发展，并访问死者家属、前线医护、公共卫生学者及医院管理层等，一连两日刊出两篇“香港医疗崩溃”文章，探讨疫下香港医疗的“病因”。）</small></p>
+<p>香港于去年年底起，爆发以变种病毒Omicron引起的第五波疫情，至农历年假后，形势急转直下，彻底失控。截至4月19日，已有8963人离世，死亡率达0.76%；离世者中，超过九成是65岁以上长者。<br><br>疫情乱局当中，有病人要在急症室苦候数天，甚至有病人未获治疗已离世；医护人员不吃不休地工作，病房内1名护士要照顾10名病人；伊利沙伯医院急症室顾问医生何晓辉，在员工座谈会上说起急症室超负荷时，更当众洒泪，“我们的同事，这个月，挨得很辛苦……”中文大学医院的行政总裁、曾任医院管理局新界东联网总监多年的冯康，早前便在报章撰文，承认医疗系统已经“沦陷”，并呼吁反思医疗制度，以及疫情的应变政策。<br><br>第五波疫情揭示的，除了公立医院的承载力，还有私营医疗系统，在应对疫情时扮演的角色；以及香港市民依靠公立医院急症室，才能接触到医疗服务的状况。一波疫情，把医疗系统的根本问题，借着逾8000名死者，尽数呈现在港人眼前。</p>
 <h2>公营医护连年流失，医管局成众矢之的</h2>
 <p>小潮（化名）3月初陪同抱恙七旬父亲求医，当时正值疫情高峰，她起初先与父亲前往私家医院，遍寻数间医院都被告知没有床位，只好转赴公立医院急症室求医。她回忆当时的公立医院急症室，仍犹有余悸，“不断有救护车进来，每个车上推出来的人（脸）都白了”。她的父亲见过医生后，获告知要轮候3至5日才能上隔离病房，被安排在急症室观察区等候上病房。<br><br>小潮看见观察区内有人直往地板上呕吐，有坐轮椅的婆婆高呼要去洗手间，医护则进进出出忙过不停，谁都没空闲多看他们一眼。床与床之间甚至容不下一个人站立，她和哥哥唯有站在房间一个角落，远远留意着父亲状况。<br><br>小潮说，观察区内间中有人鼓噪，护士说，不要催促，催促也没有用。“大家都不知道要等多久，也不知道在等什么，但就是要等。”后来父亲被验出染疫，入住隔离病房后，小潮近乎与他失去联络，“是完全不知道爸爸在病房的情况。”后来再收到父亲的消息，已是被告知病情转差，要通过视讯见最后一面。<br><br>由不适、求医、发病到离世，前后不过短短两天。小潮除了奔波以外，更多的是无力无助，“自己也会觉得很矛盾，一方面知道医护真的很忙碌，但同时间，作为病人家属真的会很无助。”小潮甚至说，考虑到自己的家人和孩子，会认真思考离开香港——因为对医疗系统已失去信心。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220420-hongkong-collaspe-of-health-care-system/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/03/820dec11db8648da8bf66fe9251789eb.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年2月16日，明爱医院在急症室旁边的露天空地设立隔离区，不少长者病人卧在病床上等待覆检，医护人员需要在露天环境照料患者。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
@@ -17,15 +18,6 @@ author: 特约撰稿人 刘伟程 发自香港
 
 <p>根据美国护士联合会（National Nurses United）建议，内科病房的护士对病人比率（Nurse-to-patient ratio）为1︰4，不少欧美先进国家则尽量保持1：5或是1：6；而香港的护士人手比例，则远远未能与国际水平接轨。在公立医院工作10年的Jason说，第五波疫情的高峰期间，他工作的病房，可以有接近40个病人，但只有3个护士。“最差的日子，可能只有3个姑娘（护士），加一个姐姐（病人服务助理），整个更份（班表），只有4个人上班……5时半喂餐，到8时还未喂完。”</p>
 <p>“每一天上班都不知怎样好，上班期间也会哭，为甚么会这样？”Jason不讳言，这段时间，是他入职以来最难挨的日子。</p>
-<p>香港的公立医院，自1991年开始，全部由医院管理局统一管理。公立医院沦陷，也可以说是医管局沦陷。而医管局人手、病床不足，亦非一朝之事。在每年的冬季流感高峰期，多间公立医院的病床占用率，均长期超过100％——而医学界，甚至医管局都曾经解释，本身病床需要流转，其实八成、甚至七成的使用率，已经等同用尽。</p>
- 
- 
- 
- 
- 
- 
-
- 
  
  
  
@@ -46,6 +38,15 @@ author: 特约撰稿人 刘伟程 发自香港
  
  
  
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
 
  
  
@@ -93,7 +94,7 @@ author: 特约撰稿人 刘伟程 发自香港
  
  
  
-<p>病床承载力以外，专科门诊的轮候时间，亦长期为人诟病。医管局分成7个医院联网，港岛占2个、九龙占3个、新界占2个；据医管局网站所载，截至2021年，以中位数推算，轮候时间最长的是九龙中医院联网的眼科门诊，轮候期为133星期，即逾2.5年。除儿科的轮候时间较短，各联网大部分的专科门诊，轮候时间中位数都超过50星期，接近1年。</p><p>香港社会长年以来对医管局批评声不绝。2013年，时任立法会医学界议员梁家骝曾提出“解散医院管理局”的议案，当时梁家骝指，轮候时间长和人手不足，并非因为总体资源不足，而是医管局内部资源分配不均，架构臃肿。他又指责医管局的联网制度，令不同联网、医院为抢夺拨款，宁愿做得更“差”，以解释自己需要更多资源。</p><p>时任食物及卫生局局长高永文在总结发言时，则重申医管局的确令香港医疗质素大幅提升，但同时补充，指依靠香港的低税率，政府的投入难以长远维持公立医院体系。</p><p>虽然批评议案最后被大比数否决，但其实梁家骝在其议案措辞上，已申明“特意选用解散为题”，是“想看看各位同事（立法会议员）有没有一些好的计谋或策略，可以纠正医管局的结构缺憾。”而观乎一众议员的发言，虽然大部分均反对解散医管局，但同时亦对医管局的运作提出各种批评，亦反映了社会上对公营医疗系统的部分不满声音。</p><p>自梁家骝提出议案后，已过9年。而轮候时间、人手流失等问题仍深深困扰医管局。近年公营医院的人手流失情况愈见严重，不少医护意兴阑珊，转投私营市场。医管局大会于去年12月16日，通过要把挽留人手视为最重要的方针之一。其中一项措施，是向员工提供低息置业贷款。当时医管局主席范鸿龄便提到，医生及护士的流失率，分别为6.2%及7.7％，较数个月前的数字再急升。公共医疗医生协会会长凌霄志当时受访，指令医护灰心的是工作量及工作环境，若不解决这些“核心问题”，估计措施成效不大。</p><p><a class="image" href="https://theinitium.com/article/20220420-hongkong-collaspe-of-health-care-system/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/1118233a78bd42d8931d451e5b9385fc.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="仁安医院急症科顾问医生何健基。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>香港的公立医院，自1991年开始，全部由医院管理局统一管理。公立医院沦陷，也可以说是医管局沦陷。而医管局人手、病床不足，亦非一朝之事。在每年的冬季流感高峰期，多间公立医院的病床占用率，均长期超过100％——而医学界，甚至医管局都曾经解释，本身病床需要流转，其实八成、甚至七成的使用率，已经等同用尽。</p><p>病床承载力以外，专科门诊的轮候时间，亦长期为人诟病。医管局分成7个医院联网，港岛占2个、九龙占3个、新界占2个；据医管局网站所载，截至2021年，以中位数推算，轮候时间最长的是九龙中医院联网的眼科门诊，轮候期为133星期，即逾2.5年。除儿科的轮候时间较短，各联网大部分的专科门诊，轮候时间中位数都超过50星期，接近1年。</p><p>香港社会长年以来对医管局批评声不绝。2013年，时任立法会医学界议员梁家骝曾提出“解散医院管理局”的议案，当时梁家骝指，轮候时间长和人手不足，并非因为总体资源不足，而是医管局内部资源分配不均，架构臃肿。他又指责医管局的联网制度，令不同联网、医院为抢夺拨款，宁愿做得更“差”，以解释自己需要更多资源。</p><p>时任食物及卫生局局长高永文在总结发言时，则重申医管局的确令香港医疗质素大幅提升，但同时补充，指依靠香港的低税率，政府的投入难以长远维持公立医院体系。</p><p>虽然批评议案最后被大比数否决，但其实梁家骝在其议案措辞上，已申明“特意选用解散为题”，是“想看看各位同事（立法会议员）有没有一些好的计谋或策略，可以纠正医管局的结构缺憾。”而观乎一众议员的发言，虽然大部分均反对解散医管局，但同时亦对医管局的运作提出各种批评，亦反映了社会上对公营医疗系统的部分不满声音。</p><p>自梁家骝提出议案后，已过9年。而轮候时间、人手流失等问题仍深深困扰医管局。近年公营医院的人手流失情况愈见严重，不少医护意兴阑珊，转投私营市场。医管局大会于去年12月16日，通过要把挽留人手视为最重要的方针之一。其中一项措施，是向员工提供低息置业贷款。当时医管局主席范鸿龄便提到，医生及护士的流失率，分别为6.2%及7.7％，较数个月前的数字再急升。公共医疗医生协会会长凌霄志当时受访，指令医护灰心的是工作量及工作环境，若不解决这些“核心问题”，估计措施成效不大。</p><p><a class="image" href="https://theinitium.com/article/20220420-hongkong-collaspe-of-health-care-system/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/1118233a78bd42d8931d451e5b9385fc.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="仁安医院急症科顾问医生何健基。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">仁安医院急症科顾问医生何健基。<span class="credit">摄：林振东/端传媒 </span></figcaption><p></p><p>私营医院仁安医院的急症科顾问医生何健基，便曾于伊利沙伯医院工作10年。他提到在公立医院工作的医护，不少都挨至“五劳七伤”，这也是他离开的主因，“我当时都开始胃部有点不适。”</p><p>在公立医院已工作10年的护士Jason也说，他同期的朋友，不是移了民，便是转投私营。又以Covid-19疫情期间加开病房为例，他指高层毫不理解前线运作，疫情高峰期间，传媒报导医院的露天范围也放满病床，Jason说，高层随即要求把所有病床都收回医院内，“不是一句（收入医院）便可以……你的配套呢？你的人手呢？”、“每说到人手，院长就说‘没办法了，没办法了，尽做（尽量做）吧，尽做吧。’甚么叫尽做？”</p><p>更令Jason不满的，是面对人手不足，部分管理层只是不停要求员工“卖假（期）”——简单而言，在医管局“特别酬金计划”下，员工于例假或年假工作的时薪会比平常为高；透过提供较高的“卖假”薪金，要求员工放弃休假持续上班。但Jason再三强调“同事不是铁打的”，也需要休息，钱并非万能。他不忿有些管理层会对不愿意“卖假”的同事冷言冷语，“有些上司会说一些很难听的说话：你现在放大假（放年假）也没事做，为甚么不肯卖？”</p><p>“在一个医疗机构内，我们说护理，说同理心，为甚么你可以对自己同事，如此欠缺同理心？我们其实，经常都不是做‘一更’<small>（编按：香港公立医院的护士，每一更的工作时间约为8小时45分钟）</small>，我自己很多时也会超时，下一更人手不足，就加钟……我也要休息，我不是铁打的”、“当我的同事可以放假，放大假，为甚么可以说这些，如此没人性的说话？”</p><p>Jason重申，自己销假回医院帮忙“不是为了这个机构”，“如果不是为了我的同事，我才不会理会你”、“我在你的机构工作，都不知道在做甚么，都不是能够帮助别人的。经常说保持初心，我现在进来（上班），找不到初心是甚么。”</p><p>前港岛东联网总监陆志聪说，同意人手和配套问题必须解决，“同事做不做到一个医护人员内心想做的事情？可能是好好解释病情给病人，或有时间去断症。”但他也承认，硬件如新医院等，已在兴建，不过人手问题，即便此时决定到新的政策，仍须好一段时间才能看到成果。</p><p>第五波疫情期间，网上出现不少医护人员的哭诉，Jason说，预计在挨过疫情后，离职的同事只会更多，“新人又未必上手，到时入院的病人，是会越来越危险。这件事是foreseeable（可预视）。”</p><p><a class="image" href="https://theinitium.com/article/20220420-hongkong-collaspe-of-health-care-system/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/d5b31fe9fc1747adb079e79df200789c.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="前港岛东联网总监、退休后任私营医疗中心行政总裁的陆志聪医生。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">前港岛东联网总监、退休后任私营医疗中心行政总裁的陆志聪医生。<span class="credit">摄：林振东/端传媒 </span></figcaption><p></p><p>医管局成立曾创“神话”，大步前进反酿“泡沬”？</p><p>统领43间公立医院、员工人数超过8.8万人的医院管理局，在疫情摧残下，被批评至一无是处。然而，在医管局成立之初，曾创造了改革公营医疗的神话，甚至奠下了现时普遍香港市民对“医疗服务”的认知。</p><p>“（医管局）内部会说，我们是victim of our own success（自己成功下的受害者）”。退休后任私营医疗中心行政总裁的陆志聪，自2010年起担任港岛西联网行政总监，至2017年转任港岛东联网行政总监，2021年退休后，旋即于翌年转投私营市场。医管局于1990年筹备成立时，他由妇产科临床医生转为行政工作。当时医管局即将接收全港所有公立医院，他负责交接，“看看新团队要甚么，向他们解释。”</p><p>他解释，当时的“公立医院”，是指“政府医院”和“补助医院”。政府医院由政府全资出资；补助医院则由慈善机构如东华三院等作为董事局出资及运作，政府则提供资助，像东华三院等出资及运作。</p><p>他回忆说，80年代政府医院和补助医院的质素不一，病人多数选择资源较充足的政府医院，“一般市民觉得补助医院，设备、人才都差一些。”当时陆志聪在政府的伊利沙伯医院工作，医院使用率达130、140％，“洗手间也放了病床”、“后备发电机也没有”。与此同时，补助医院如广华医院，使用率不过六、七成。</p><p>有见及此，港英政府认为需要改革，委托顾问公司研究，并于1985年发表《史葛报告书》，建议成立一个全新的医疗管理机构，独立于公务员体系外，统合政府医院及补助医院，改善整体医疗质素。“当时顾问报告，觉得（医院）好大问题是欠管理。”医管局因此于1990年诞生，并于1991年，接收全港的政府医院和补助医院。</p><p>医管局成立后，获政府大幅增拨资源。以病床和医生人手为例，由1992年到1997年期间，便分别增加了18％和39％。资源增加，医疗质素自然相应提升。当时医管局实现的其中一个“神话”，便是令本身公立医院的“帆布床现象”（因床位不足，要加开帆布床）绝迹。</p><p><a class="image" href="https://theinitium.com/article/20220420-hongkong-collaspe-of-health-care-system/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/d3b040c0756348fca5c5777d2baa9d28.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             </p><figcaption itemprop="caption"><span class="credit"></span></figcaption><p></p><p>当时公营医疗的大步改善，甚至冲击了私营医疗。“私家医生说自己是‘朝三暮四’，一天只看数个病人......私家医院又说被医管局抢了‘生意’。”到今日回首过去，陆志聪仍认为医管局的改革是美谈，但不停上涨的开支和市民的期望，亦同时令香港公营医疗变成一个“泡沬”，“只是何时爆破。”</p><p>转捩点可以追溯至1997年的亚洲金融风暴。经济不景，政府多个部门开始紧缩开支，连带医管局的拨款亦愈见紧拙。医管局更曾于2002年，推出“自愿离职计划”，让医护人员可以提早退休，以减少人手，只是计划因2003年“沙士”疫情而搁置。到2003／04年度至2005／06年度，政府两度缩减医管局拨款，病床数目亦因此减少。</p><p><a class="image" href="https://theinitium.com/article/20220420-hongkong-collaspe-of-health-care-system/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/8049d17268c2441cb9885350b025ae28.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
