--- a/_posts/2022-04-19-INITIUM-早报-前一天招降不获理会-俄军再度向死守亚速钢鐡厂的乌军发出最后通牒.html
+++ b/_posts/2022-04-19-INITIUM-早报-前一天招降不获理会-俄军再度向死守亚速钢鐡厂的乌军发出最后通牒.html
@@ -10,7 +10,7 @@ author:
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220420-morning-brief/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/f4253a84202f4d82a94e260849d3016e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年4月18日在乌克兰的马里乌波尔，俄军对亚速钢鐡厂发动攻势，钢铁厂冒出浓烟。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年4月18日在乌克兰的马里乌波尔，俄军对亚速钢鐡厂发动攻势，钢铁厂冒出浓烟。<span class="credit">摄：Alexei Alexandrov / AP</span></figcaption></figure><h3>前一天招降不获理会，俄军再度向死守亚速钢鐡厂的乌军发出最后通牒</h3>
-<p>俄罗斯军队继续对乌克兰东部顿巴斯地区展开大规模攻势。俄罗斯国防部证实，他们于当地周二（19日）向死守马里乌波尔亚速钢鐡厂的乌军发出最后通牒，但直至限期届满，仍然没有任何一名乌军士兵弃械投降。<a href="https://www.bbc.com/news/live/world-europe-61136997">俄军于当地周三（20日）再度要求当地乌军投降</a>，换取俄军暂时停火，以让平民偱人道走廊撤离。</p>
+<p>俄罗斯军队继续对乌克兰东部顿巴斯地区展开大规模攻势。俄罗斯国防部证实，他们于当地周二（19日）向死守马里乌波尔亚速钢鐡厂的乌军发出最后通牒，但直至限期届满，仍然没有任何一名乌军士兵弃械投降。<a href="https://www.bbc.com/news/live/world-europe-61136997">俄军于当地周三（20日）再度要求当地乌军投降</a>，换取俄军暂时停火，以让平民循人道走廊撤离。</p>
 <p>据报道，亚速钢鐡厂除了有乌军死守，还有至少1000名妇孺在地下室避难。<a href="https://www.reuters.com/world/europe/russia-tells-ukrainian-forces-surrender-azovstal-plant-by-noon-2022-04-19/">俄罗斯国防部较早前宣称</a>，已经暂时撤走钢铁厂周边的部队，愿意弃械投降的人可以乘坐专车经三条路线离开，并且会获得食物及医疗援助。</p>
 <p>乌克兰政府则指，自俄军入侵乌克兰以来，马里乌波尔有至少两万名平民丧生，而乌方持续尝试撤走当地平民，但在俄军的持续空袭后一直未能成功。</p>
 <p>俄罗斯外交部长拉夫罗夫（Sergey Lavrov）早前表示，针对乌克兰的“特别军事行动”已经进入新阶段，预期会取得重大进展，但暂时不打算动用核武。乌克兰总统泽连斯基（Volodymyr Zelenskyy）则形容，俄军已正式发动“顿巴斯之战”。乌克兰国防部指出，俄军计划夺取包括顿涅茨克和卢甘斯克的整个顿巴斯地区，以开通连接克里米亚的陆路走廊。</p>
